--- a/nginx-template/default-example.conf
+++ b/nginx-template/default-example.conf
@@ -1,22 +1,22 @@
 server {
     listen 80;
-    server_name soyless.xyz;
+    server_name <++>;
     # root /public_html;
 
     location / {
-        return 301 https://soyless.xyz$request_uri;
+        return 301 https://<++>$request_uri;
     }
 }
 
 server {
     listen 443 ssl http2;
-    server_name soyless.xyz;
+    server_name <++>;
     # root /public_html;
 
     ssl on;
     server_tokens off;
-    ssl_certificate         /etc/nginx/ssl/live/soyless.xyz/fullchain.pem;
-    ssl_certificate_key     /etc/nginx/ssl/live/soyless.xyz/privkey.pem;
+    ssl_certificate         /etc/nginx/ssl/live/<++>/fullchain.pem;
+    ssl_certificate_key     /etc/nginx/ssl/live/<++>/privkey.pem;
     ssl_dhparam             /etc/nginx/dhparam/dhparam-2048.pem;
 
     ssl_buffer_size 8k;
