--- a/nginx-template/default-example.conf
+++ b/nginx-template/default-example.conf
@@ -10,6 +10,7 @@ server {
 server {
     listen 443 ssl http2;
     server_name <++>;
+    # root /public_html;
 
     ssl on;
     server_tokens off;
